--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -8,17 +8,25 @@ categories: [info, about me]
 tags: [CV, Emacs, Python, Literate Programming]
 ---
 #+END_EXPORT
+#+BEGIN_EXPORT html
+#+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
+#+TOC: headlines 2
+#+END_EXPORT
+
+#+OPTIONS: toc:nil num:nil tex:t author:nil title:nil date:nil
+
 #+AUTHOR:    Anton S. Kosinov
 #+TITLE:     Mental Athlete Curriculum Vitae
 #+SUBTITLE:  Would you like to unleash the team synergy?
 #+EMAIL:     a.s.kosinov@gmail.com
 #+LANGUAGE: en
-#+OPTIONS: toc:nil num:nil tex:t
+
 #+LaTeX_HEADER: \usepackage[T1]{fontenc}
 #+LaTeX_HEADER: \usepackage{mathpazo}
 #+LaTeX_HEADER: \linespread{1.05}
 #+LaTeX_HEADER: \usepackage[scaled]{helvet}
 #+LaTeX_HEADER: \usepackage{courier}
+#+LATEX_HEADER: \usepackage[margin=0.5in]{geometry}
 
 
 * Img                                                              :noexport:
