MathJax formula rendering test

--- a/2017-04-11-learning-feature-vectors-for-words.org
+++ b/2017-04-11-learning-feature-vectors-for-words.org
@@ -211,9 +211,13 @@ tags: [feature vector,]
 
    – A value of 0.000001 is much better than 0.000000001
 
-   – The steepness of dC/dy exactly balances the flatness of dy/dz C =
-   − ∑ t j log y j j target value ∂C ∂C ∂y j = ∑ = y i − t i ∂z i ∂y j
-   ∂z i j
+   – The steepness of dC/dy exactly balances the flatness of dy/dz 
+
+   $C = -\displaystyle \sum_{j} target_j \log y_j$
+
+   $\frac {\partial C}{\partial z_i} = \displaystyle \sum_j \frac
+   {\partial C}{\partial y_j} \frac {\partial y_i}{\partial z_j} =
+   y_j - t_j$
 
 
 * Neuro-probabilistic language models
