--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2344,7 +2344,7 @@ tags: [coding, algorithms]
 
    #+RESULTS:
 
-* Longest common subsequence
+* #31 Longest common subsequence
   
 ** Description
    Write a function called LCS that accepts two sequences, and returns
@@ -2398,7 +2398,7 @@ tags: [coding, algorithms]
      # 'notatest' should equal 'nottest'
    #+END_SRC
 
-* Design a Simple Automaton (Finite State Machine)
+* #32 Design a Simple Automaton (Finite State Machine)
 
 ** Description
    Create a finite automaton that has three states. Finite automatons
